# trendzap-intelligence

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
src/api/: __init__.py  main.py
src/trendzap_intelligence/: __init__.py  ai_analyzer.py  config.py
src/trendzap_intelligence/models/: __init__.py  anomaly_detector.py  engagement_forecaster.py  trend_detector.py  virality_predictor.py
tests/: test_models.py
